<resources>
    <string name="app_name">MovieProject</string>
    <string name="tv_shows">List Movie | Most Popular</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="u2024">․</string>
    <string name="website">Website</string>
    <string name="episodes">Episodes</string>
    <string name="watchlist">Watchlist</string>
    <string name="search_tv_show">Search TV Show</string>
</resources>