<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="tvShowImgURL"
            type="String" />
        <variable
            name="tvShowName"
            type="String" />
        <variable
            name="networkCountry"
            type="String" />
        <variable
            name="status"
            type="String" />
        <variable
            name="startDate"
            type="String" />
        <variable
            name="description"
            type="String" />
        <variable
            name="rating"
            type="String" />
        <variable
            name="genre"
            type="String" />
        <variable
            name="runtime"
            type="String" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/Primary"
        tools:context=".activities.TVShowDetailsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/sliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <View
                    android:id="@+id/viewFading"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/bg_fading"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/sliderViewPager"/>

                <LinearLayout
                    android:id="@+id/layoutSliderIndicators"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/viewFading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgTVShow"/>

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_back_btn"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imgTVShow"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:imageURL="@{tvShowImgURL}"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/sliderViewPager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sliderViewPager"
                    app:riv_corner_radius="@dimen/_6sdp"
                    />
                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{tvShowName}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgTVShow"
                    app:layout_constraintTop_toBottomOf="@id/sliderViewPager"
                    />

                <TextView
                    android:id="@+id/textNetworkCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{networkCountry}"
                    android:textColor="@color/TextOther"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toEndOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/textName"
                    />

                <TextView
                    android:id="@+id/textStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{status}"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toEndOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/textNetworkCountry"
                    />


                <TextView
                    android:id="@+id/textStarted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Bắt đầu từ " + startDate}'
                    android:textColor="@color/TextSecondary"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/textName"
                    app:layout_constraintStart_toEndOf="@id/textName"
                    app:layout_constraintTop_toBottomOf="@id/textStatus"
                    />

                <TextView
                    android:id="@+id/textDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:maxLines="4"
                    android:text="@{description}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/imgTVShow"
                    />
                <TextView
                    android:id="@+id/textReadmore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/read_more"
                    android:textColor="@color/Accent"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/textDescription"
                    app:layout_constraintTop_toBottomOf="@id/textDescription"
                    />
                <View
                    android:id="@+id/viewDivider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/TextSecondary"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/textReadmore"
                    />
                <LinearLayout
                    android:id="@+id/layoutMisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider1">
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/star"
                        ></ImageView>
                    <TextView
                        android:id="@+id/textRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/ubuntu"
                        android:includeFontPadding="false"
                        android:text="@{rating}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2024"
                        android:textColor="@color/Accent"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:id="@+id/textGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu"
                        android:includeFontPadding="false"
                        android:text="@{genre}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:text="@string/u2024"
                        android:textColor="@color/Accent"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:id="@+id/textRuntime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu"
                        android:includeFontPadding="false"
                        android:text="@{runtime}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/viewDivider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/TextSecondary"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/layoutMisc"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonWebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/website"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:backgroundTint="@color/Accent"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/buttonEpisodes"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider2"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEpisodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/episodes"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/TextOther"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonWebsite"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider2"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE,default = gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/imageWatchlist"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_fab"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_watchlist"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>